--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in Version 2.0-3
+
+ o Useless files have been deleted from the package source.
+
+
 Changes in Version 2.0-2
 
  o Minor correction in plot.strata when a certain stratum is included in the strata object.
